[package]
name = "reign"
version = "0.1.0"
description = "Quickly spin up compute"
authors = ["shane"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/reign"
repository = "https://github.com/digitalsanctum/reign"
keywords = ["cli", "reign", "tools", "shell"]
categories = ["command-line-utilities", "command-line-interface", "utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aws-config = "0.49.0"
aws-sdk-ec2 = "0.19.0"
aws-sdk-eks = "0.19.0"
base64 = "0.13.0"
clap = { version = "3", features = ["derive", "env"] }
port_scanner = "0.1.5"
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]

